# chipwhisperer-enhanced-plugins

./: .gitignore  .gitmodules  MANIFEST.in  README.md  docker-compose.yml  initial_test.ipynb  install_mac.sh  launch_docker.sh  setup.py  setup_wsl_env.sh
.github/workflows/: build.yml  buildTestOnLinux.yml  buildTestOnMacOS.yml  build_3_10.yml  pushDockerImage.yml  reusableBuildOnLinux.yml  reusableBuildOnMacOS.yml  runTestOnLinux.yml
cpp_libs/: CMakeLists.txt
cpp_libs/cmake/: quadfloat.cmake
cpp_libs/cpa_progressive/: AESLeakageModel.cpp  AESLeakageModel.hpp  Arrays.hpp  CMakeLists.txt  FastCPA.cpp  FastCPA.hpp  FastCPACuda.cu  FastCPACuda.hpp  FastCPACudaFP32.cu  FastCPACudaFP32.hpp  FastCPAOpenCL.cpp  FastCPAOpenCL.hpp  FastCPAOpenCLFP32.cpp  FastCPAOpenCLFP32.hpp  bind.cpp  device_code.cl
cpp_libs/include/: AESLeakageModel.hpp  Arrays.hpp  fp32_premitives.hpp  quadfloat.h  quadfloat.hpp
cpp_libs/model/: AESLeakageModel.cpp  CMakeLists.txt  bind.cpp
cpp_libs/socpa/: CMakeLists.txt  SOCPA.cpp  SOCPA.hpp  SOCPACuda.cu  SOCPACuda.hpp  SOCPACudaFP32.cu  SOCPACudaFP32.hpp  SOCPAOpenCL.cpp  SOCPAOpenCL.hpp  SOCPAOpenCLFP32.cpp  SOCPAOpenCLFP32.hpp  bind.cpp  device_code.cl
cpp_libs/soft_quadfloat/: CMakeLists.txt  quadfloat.cpp
datasets/: .gitignore  README.md
datasets/rsm_hls/: Makefile  README.md  rsm_hls.cwp
datasets/rsm_hls/rsm_hls_data/traces/: Makefile  Makefile.deps  config_part_0.cfg  config_part_1.cfg  config_part_10.cfg  config_part_11.cfg  config_part_12.cfg  config_part_13.cfg  config_part_14.cfg  config_part_15.cfg  config_part_16.cfg  config_part_17.cfg  config_part_18.cfg  config_part_19.cfg  config_part_2.cfg  config_part_20.cfg  config_part_21.cfg  config_part_22.cfg  config_part_23.cfg  config_part_24.cfg  config_part_25.cfg  config_part_26.cfg  config_part_27.cfg  config_part_28.cfg  config_part_29.cfg  config_part_3.cfg  config_part_30.cfg  config_part_31.cfg  config_part_32.cfg  config_part_33.cfg  config_part_34.cfg  config_part_35.cfg  config_part_36.cfg  config_part_37.cfg  config_part_38.cfg  config_part_39.cfg  config_part_4.cfg  config_part_40.cfg  config_part_41.cfg  config_part_42.cfg  (+62 more)
datasets/rsm_rtl/: Makefile  README.md  rsm_rtl.cwp
datasets/rsm_rtl/rsm_rtl_data/traces/: Makefile  Makefile.deps  config_part_0.cfg  config_part_1.cfg  config_part_10.cfg  config_part_11.cfg  config_part_12.cfg  config_part_13.cfg  config_part_14.cfg  config_part_15.cfg  config_part_16.cfg  config_part_17.cfg  config_part_18.cfg  config_part_19.cfg  config_part_2.cfg  config_part_20.cfg  config_part_21.cfg  config_part_22.cfg  config_part_23.cfg  config_part_24.cfg  config_part_25.cfg  config_part_26.cfg  config_part_27.cfg  config_part_28.cfg  config_part_29.cfg  config_part_3.cfg  config_part_30.cfg  config_part_31.cfg  config_part_32.cfg  config_part_33.cfg  config_part_34.cfg  config_part_35.cfg  config_part_36.cfg  config_part_37.cfg  config_part_38.cfg  config_part_39.cfg  config_part_4.cfg  config_part_40.cfg  config_part_41.cfg  config_part_42.cfg  (+62 more)
datasets/rv_mask/: Makefile  README.md  rv_mask.cwp  rv_mask_small.cwp
datasets/rv_mask/rv_mask_data/traces/: Makefile  Makefile.deps  config_part_0.cfg  config_part_1.cfg  config_part_10.cfg  config_part_11.cfg  config_part_12.cfg  config_part_13.cfg  config_part_14.cfg  config_part_15.cfg  config_part_16.cfg  config_part_17.cfg  config_part_18.cfg  config_part_19.cfg  config_part_2.cfg  config_part_20.cfg  config_part_21.cfg  config_part_22.cfg  config_part_23.cfg  config_part_24.cfg  config_part_25.cfg  config_part_26.cfg  config_part_27.cfg  config_part_28.cfg  config_part_29.cfg  config_part_3.cfg  config_part_30.cfg  config_part_31.cfg  config_part_32.cfg  config_part_33.cfg  config_part_34.cfg  config_part_35.cfg  config_part_36.cfg  config_part_37.cfg  config_part_38.cfg  config_part_39.cfg  config_part_4.cfg  config_part_40.cfg  config_part_41.cfg  config_part_42.cfg  (+62 more)
datasets/rv_mask/rv_mask_small_data/traces/: Makefile  Makefile.deps  config_part_0.cfg  config_part_1.cfg  config_part_10.cfg  config_part_11.cfg  config_part_12.cfg  config_part_13.cfg  config_part_14.cfg  config_part_2.cfg  config_part_3.cfg  config_part_4.cfg  config_part_5.cfg  config_part_6.cfg  config_part_7.cfg  config_part_8.cfg  config_part_9.cfg
docker/: Dockerfile-amdgpu  Dockerfile-intel-gpu  Dockerfile-normal  Dockerfile-nvidia  docker-compose.override.amdgpu.yml  docker-compose.override.intel-gpu.yml  docker-compose.override.map-host-account.yml  docker-compose.override.nvidia.yml  entrypoint.sh  launch_notebook.sh
docs/: README.md  docker.md  fast_cpa.md  hardware.md  setup.md  visa_scope.md
hardware/ESP32_AES128/: test_driver.py
hardware/ESP32_AES128/src/: main.cpp
lib/chipwhisperer_enahnced_plugins/scopes/: __init__.py
lib/chipwhisperer_enahnced_plugins/scopes/Rigol/: rigol.py
lib/chipwhisperer_enahnced_plugins/targets/: __init__.py
lib/cw_plugins/analyzer/attacks/: socpa.py  socpa_stats.py
lib/cw_plugins/scopes/: base.py
lib/cw_plugins/scopes/Keysight/: MSOX4000.py  keysight.py
lib/cw_plugins/scopes/Rigol/: DHO900.py  MSO8000.py  rigol.py
lib/cw_plugins/targets/: CW305Shell.py  CW305ShellAESExamples.py  CW305VexRISCV.py  CW305VexRISCVAESExample.py  ESP32.py  SakuraShellAESExamples.py  SakuraX.py  SakuraXShell.py  SakuraXVexRISCV.py  SakuraXVexRISCVAESExample.py  __init__.py  utils.py
lib/cw_plugins/targets/aes_soft/: Makefile  aes.c  aes.elf  aes_func.c  aes_func.h  (+3 more)
lib/sca_tools/scopes/: base.py  scopes.py
lib/sca_tools/targets/: SakuraX.py  __init__.py
notebooks/: acquire_traces.ipynb  cpa_attack.ipynb  gui_helper.py  tutorial_cpa.ipynb  tutorial_socpa.ipynb
pytest/: cwlite_trace.cwp  test_fastcpa.py
pytest/cwlite_trace_data/analysis/: cw_best_geuss.pkl
pytest/cwlite_trace_data/traces/: 2025.05.14-07.04.02_0textin.npy  2025.05.14-07.04.02_0textout.npy  2025.05.14-07.04.02_0traces.npy  config_2025.05.14-07.04.02_0.cfg
scripts/: cw2daredevil.py  cw2ramdpa.py  cw2sicak.py
udev-rules/: 99-keysight-oscilloscope.rules  99-rigol-oscilloscope.rules  99-sakura-x.rules
(+12 files in other folders)
