#
#    Copyright (C) 2024 The University of Tokyo
#    
#    File:          /cpp_libs/soft_quadfloat/CMakeLists.txt
#    Project:       sca_toolbox
#    Author:        Takuya Kojima in The University of Tokyo (tkojima@hal.ipc.i.u-tokyo.ac.jp)
#    Created Date:  30-01-2024 12:31:52
#    Last Modified: 30-01-2024 12:31:53
#


add_library(quadfloat STATIC quadfloat.cpp)